# eof

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb  demo_multisensor.ipynb
scripts/: build_srf_data.py  update_dataset_versions.py
src/eof/: __init__.py  _bandpass.py  _cache.py  _cloud_masks.py  _credentials.py  _earthdata_hdf_reader.py  _footprints.py  _gdal_io.py  _gee_reader.py  _geojson.py  _parallel_fetch.py  _platform_bindings.py  _scl.py  _sensor_configs.py  _source_configs.py  _stac_reader.py  _types.py
src/eof/data/: dataset_versions.json  srf.npz
